apps/album-front/deploy/k8s/ssg/service.yaml
apiVersion: v1
kind: Service
metadata:
  name: album-app-ssg-service
spec:
  selector:
    app: album-app-ssg
  ports:
    - protocol: TCP
      port: 80
      targetPort: 8080
  type: ClusterIP
