apps/album-front/deploy/k8s/ssg/networkpolicy.yaml
apiVersion: networking.k8s.io/v1
kind: NetworkPolicy
metadata:
  name: album-app-ssg-netpol
  namespace: default
spec:
  podSelector:
    matchLabels:
      app: album-app-ssg
  policyTypes:
  - Ingress
  ingress:
  - from:
    - namespaceSelector:
        matchLabels:
          kubernetes.io/metadata.name: ingress-nginx
    ports:
    - protocol: TCP
      port: 8080
